--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,40 @@
 @import "~bootstrap/dist/css/bootstrap";
 .header-bg {
-    background-color: #01acfb;
+  background-color: #01acfb;
 }
-// add your styles here
+
+.search-component {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 90%;
+  max-width: 800px;
+  margin: 20px auto;
+}
+
+input, select {
+  width: 100%;
+  margin: 2px 0 10px;
+
+  &:not([type=submit]) {
+    padding: 12px 20px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  &[type=submit] {
+    background-color: #01acfb;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 10px 0 0;
+
+    &:hover {
+      background-color: #0089c9;
+    }
+  }
+}
