Adding tests files and improve results style

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,7 +5,7 @@
 
 .search-component {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #ededed;
   padding: 20px;
   width: 90%;
   max-width: 800px;
@@ -36,5 +36,74 @@ input, select {
     &:hover {
       background-color: #0089c9;
     }
+  }
+}
+
+.results {
+  width: 90%;
+  max-width: 1120px;
+  margin: 25px auto;
+
+  .resultCard {
+    box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.1);
+    padding: 16px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+  }
+}
+
+.row {
+  margin: 0 -5px;
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .col {
+    float: left;
+    padding: 0 10px;
+    max-width: 100%;
+
+    &.col-4 {
+      max-width: 33.333333%;
+    }
+
+    &.col-6 {
+      max-width: 50%;
+    }
+
+    &.col-8 {
+      max-width: 66.666667%;
+    }
+  }
+    
+  @media screen and (max-width: 600px) {
+    .col {
+      min-width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border-left-color: #01acfb;
+
+  animation: spin 1s ease infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
